--- a/visual/HiRecastnavigation/HiRecastnavigation/HiRecastnavigation.vcxproj.filters
+++ b/visual/HiRecastnavigation/HiRecastnavigation/HiRecastnavigation.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="HiRecastnavigationTest.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -30,6 +33,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="HiRecastnavigationTest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
